# Routes/AdminRoutes.js
@@ -4,6 +4,7 @@ const AdminController = require('../Controllers/AdminController')
 const auth = require('../middleware/auth')
 
 router.get('/users',AdminController.getUsers)
-router.delete('/user',AdminController.deleteUser)
+router.delete('/user',auth,AdminController.deleteUser)
+router.delete('/dungeon',auth,AdminController.deleteDungeons)
 
 module.exports = router
